Fixed IE scrollbar issues for most if not all components
Fixed by defining font-size:0 and line-height:normal for all v-scrollable elements. A font-size is defined using $font-size for all themes and this is reset in v-widget. Similarly for $line-height.
Should fix at least #9004, #9552, #9572

--- a/WebContent/VAADIN/themes/base/common/common.scss
+++ b/WebContent/VAADIN/themes/base/common/common.scss
@@ -219,6 +219,8 @@ body &.v-app-loading {
 
 .v-scrollable {
 	overflow: auto;
+	font-size: 0;
+	line-height: normal;
 }
 
 /* Enable kinetic scrolling on Mobile Safari 6 */ 
