--- a/WebContent/VAADIN/themes/base/layout/layout.scss
+++ b/WebContent/VAADIN/themes/base/layout/layout.scss
@@ -33,6 +33,12 @@ TODO
 .v-gridlayout.v-layout-margin-top {
 	padding-top: 24px;
 }
+.v-gridlayout,
+.v-verticallayout,
+.v-horizontallayout {
+	font-size: 0;
+}
+
 .v-gridlayout.v-layout-margin-bottom {
 	padding-bottom: 24px;
 }
