--- a/WebContent/VAADIN/themes/base/widget/widget.scss
+++ b/WebContent/VAADIN/themes/base/widget/widget.scss
@@ -7,7 +7,8 @@
 	text-align: left;
 	display: inline-block;
 	white-space: normal;
-	vertical-align: top;
+	vertical-align: bottom;
+	font-size: $font-size;
+	line-height: $line-height;
 }
-
 }
